--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,13 +5,15 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c %3x - %m%n
 #Log to file FILE
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=logfile.log
+log4j.appender.file.File=src/main/resources/logfile.log
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
 log4j.appender.file.append=true
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c %3x - %m%n
 
-log4j.logger.org.hibernate=OFF
-log4j.logger.org.apache.http.impl.execchain.RetryExec=OFF
+log4j.logger.org.hibernate=ERROR
+log4j.logger.org.apache=ERROR
+log4j.logger.org.jboss.logging=ERROR
+
 #Root Logger
 log4j.rootLogger=INFO, stdout, file
