--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,4 +16,4 @@ log4j.logger.org.apache=ERROR
 log4j.logger.org.jboss.logging=ERROR
 
 #Root Logger
-log4j.rootLogger=INFO, stdout, file
+log4j.rootLogger=DEBUG, stdout, file
