--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>2.4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-slf4j_2.11</artifactId>
+            <version>2.4.4</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
