--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,8 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c %3x
 
 log4j.logger.org.hibernate=ERROR
 log4j.logger.org.apache=ERROR
+log4j.logger.httpclient.wire.header=ERROR
 log4j.logger.org.jboss.logging=ERROR
 
 #Root Logger
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=INFO, stdout, file
