--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,6 +15,6 @@ log4j.logger.org.hibernate=ERROR
 log4j.logger.org.apache=ERROR
 log4j.logger.httpclient.wire.header=ERROR
 log4j.logger.org.jboss.logging=ERROR
-
+log4j.logger.io.netty=ERROR
 #Root Logger
-log4j.rootLogger=INFO, stdout, file
+log4j.rootLogger=DEBUG, stdout, file
