--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,4 +17,4 @@ log4j.logger.httpclient.wire.header=ERROR
 log4j.logger.org.jboss.logging=ERROR
 log4j.logger.io.netty=ERROR
 #Root Logger
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=INFO, stdout, file
